JO-2007-08-24-0: Refactoring: Class, method name changes, new package
                 Review:      JG

RD-2007-07-30-0: CVS          Created V61u2_TAG

-----------------------------------------------
JO-2007-07-30-0: Bugfix:      Changed DB_VERSION in DBWriterTestConfig.properties

RD-2007-07-30-0: CVS          Created V61u1_TAG
-----------------------------------------------

JO-2007-07-17-0: Bugfix:      fixed a small typo introduced in previous commit

JO-2007-07-01-0: Bugfix:      Oracle: rollback segments keep filling up, Postgres: delete query keeps running
                 Bugster:     6565841
                 Issue:       2284
                 Bugfix:      sge_queue_values definition does not contain PRIMARY KEY
                 Bugster:     6572801
                 Issue:       2309
                 Bugfix:      Oralce, Postgres FOREIGN KEY fields need to be indexed
                 Bugster:     6574565
                 Issue:       2317
                 Changed:     dbwriter, common, tests
                 Review:      LP

JO-2007-05-30-0: RFE:         Wrong usage of 'day' format model in trunc(date) Oracle functions
                 Bugster:     6563346
                 Issue:       2266
                 Changed:     Oracle queries in reporting, dbwriter.xml
                 Review:      AP

JO-2007-05-28-0: RFE:         DBW MySql query Average Job Turnaround Time causes exception
                 Bugster:     6556411
                 Changed:     MySql, Oracle queries in reporting
                 Review:      AP

JO-2007-05-23-0: RFE:         Arco should support webconsole 3.0.x
                 Bugster:     6481737
                 Changed:     arcorun, inst_reporting, build.xml, build.properties,
                              util, src
                 Review:      AP

AP-2007-05-09-0: Bugfix:      o arcorun can not be used as sge_admin user if the toc 
                              file is not available